# evolve_yew

./: Cargo.toml  Makefile  Trunk.toml  admin.dockerfile  index.html
css/: bulma.css  bulma.css.map  forget_pwd.css  login.css  register.css  styles.css
mybulma/: package-lock.json  package.json
mybulma/scss/: mystyles.scss
src/: confirm_form.rs  forget_pwd.rs  login.rs  main.rs  register.rs  role_list.rs  user_form.rs  user_list.rs  user_list_item.rs
src/component/: menu.rs  message_dialog.rs  message_item.rs  message_list.rs  mod.rs  pager.rs  pager_item.rs  welcome.rs
src/error_page/: mod.rs  page_not_found.rs  request_error.rs
src/layout/: header.rs  layout.rs  mod.rs  navbar.rs
src/util/: common.rs  error.rs  mod.rs  request.rs
