[package]
edition = "2021"
name = "evolve_frontend_admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
# chrono = "*"
# gloo = "*"
# gloo-console = "*"
gloo-net = "0"
# gloo-utils = "*"
# js-sys = "*"
# log = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# wasm-bindgen = {version = "0.2"}
futures = "0"
getrandom = { version = "0", features = ["js"] }
gloo = "0"
wasm-bindgen-futures = "0"
# gloo-utils = "0.1"
chrono = "0"
log = "0"
rand = "0"
# regex = "1"
wasm-logger = "0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
lazy_static = "1"
evolve_axum_cli = { path = "../evolve_axum/evolve_axum_cli" }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
fancy-regex = "0.11.0"

[dependencies.web-sys]
features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
version = "^0.3.70"
